# src/app/api/models/account.ts
@@ -46,4 +46,5 @@ export interface Account {
   firstName: string;
   lastName: string;
   email: string;
+  password: string;
 }
